--- a/Baatna_web/style.css
+++ b/Baatna_web/style.css
@@ -39,19 +39,9 @@
         .header li:hover,
         .header li.active {
             border-radius: 5px;
-            /* border: 1px solid rgba(49, 210, 170, 1); */
-        }
-        a.active{
-            color: rgba(49, 210, 170, 1) !important;
-        }
-        a.hover {
-            color: rgba(49, 210, 170, 1) !important;;
-        }
-        li.active {
-            border-radius: 5px;
             border: 1px solid rgba(49, 210, 170, 1);
         }
-
+        
         .header a.button {
             background-color: transparent;
             color: #666;
@@ -63,14 +53,10 @@
         
         .outer_wrapper {
             height: calc(100% - 320px);
+            background-image: url("images/home back-14 2.png");
             background-size: 100% 100%;
             background-repeat: no-repeat;
             position: relative;
-        }
-
-        .illustrations {
-            width:100%;
-            position: fixed;
         }
         
         .intro {
@@ -78,7 +64,7 @@
              }
         
         .phone_container{
-            position:absolute; width:400px; bottom:0px; right: 224px;
+            position:absolute; width:400px; bottom:4px; right: 224px;
         }
 
         .header .sign_up:hover {
@@ -113,20 +99,16 @@
         }
         
         .signup .button {
-            background-color: #666666;
+            background-color: rgba(49, 210, 170, 1);
             border-radius: 5px;
-            border: 1px solid #666666;
+            border: 1px solid rgba(49, 210, 170, 1);
             font-size: 14px;
             padding: 20px;
             color: white;
         }
-
-        .sect2 {
-            background: white !important;
-        }
         
         .sect2 img {
-            width: 90%;
+            width: 80%;
             text-align: center;
         }
         
@@ -135,7 +117,7 @@
         }
         
         .feature_image-2 {
-            height: 100px;
+            height: 140px;
         }
         
         .toggle_ele {
@@ -144,42 +126,39 @@
         }
         
         .second-feature-section {
-            margin-top: 55px;
+            margin-top: 30px;
         }
         
         .sect2 p {
             margin-top: 15px;
             margin-bottom: 0;
-            font-size: 14px !important;
+            font-size: 13px;
         }
 
-        #about1 p{
-            margin-right: 60px;
+        #feature1 p{
+            margin-right: 30px;
         }
 
-        #about2 p{
+        #feature2 p{
             margin-left: 5px;
         }
-        
-        #about3 p{
-            margin-left: 45px;
+
+        #feature3 p{
+            margin-left: 80px;
         }
 
+        
         .sect3 p {
             margin-top: 15px;
             margin-bottom: 0;
-            font-size: 13px !important ;
+            font-size: 13px;
         }
         
         .sect3 li {
-            padding: 0 1%;
-        }
-
-        .sect3. h1 {
-            margin-bottom: 25px;
+            padding: 0 5%;
         }
         
-        .sect3 .highlight_link span, .referals p{
+        .sect3 .highlight_link span {
             vertical-align: middle;
             margin-top: 48px;
             font-weight: bold;
@@ -188,11 +167,6 @@
             display: inline;
             padding-bottom: 5px;
             text-transform: uppercase;
-        }
-
-        .referals p{
-            border-bottom: none !important;
-            font-size: 13px !important;
         }
         
         .sect3 .highlight_link .spacer {
@@ -212,10 +186,6 @@
             line-height: 4rem;
             color: white;
         }
-
-        input#signupemail {
-            color: black !important;
-        }
         
         .sect4 a.button {
             background-color: rgba(49, 210, 170, 1);
@@ -227,7 +197,7 @@
         }
         
         .sect2 {
-            padding: 80px 0 0px;
+            margin: 80px 0;
         }
         
         .sect3 {
@@ -235,8 +205,7 @@
         }
         
         .sect4 {
-            background: url("images/gradient-20.png") repeat scroll 0% 0% / 100% 100%;
-            padding: 80px 0;
+            margin: 80px 0;
         }
         
         .sect4 h1,
@@ -248,10 +217,6 @@
             font-family: globerbold;
             margin-bottom: 30px;
             margin-top: 20px;
-        }
-
-        .sect2 h1{
-            padding-bottom: 10px;
         }
         
         .sect6 .button {
@@ -273,7 +238,7 @@
         }
         
         .footer_nav {
-            margin-top: 20px;
+            margin-top: 15px;
         }
         
         .footer_nav a {
@@ -317,10 +282,13 @@
         }
 
         .person3{
-            background:url('images/saagar4.jpg') no-repeat;
+            background:url('images/Muthu_Raman.jpg') no-repeat;
         }
 
-        .person1, .person2, .person3 {
+        .person4{
+            background:url('images/Saagar4.jpg') no-repeat;
+        }
+        .person1, .person2, .person3, .person4 {
             height:288px;
             width: 288px;
             background-size: cover;
@@ -398,7 +366,7 @@
         .cap-bot:hover figcaption { bottom: 0; }
 
         input.button.postfix {
-            background-color: #888888;
+            background-color: rgba(49, 210, 170, 1);
             border-color: transparent;
         }
 
@@ -495,16 +463,3 @@
 
 
         /* slider section ends */ 
-
-        hr {
-            border-color: #EFEFEF !important;
-        }
-
-        #sign-up2{
-            font-size: 16px !important;
-        }
-
-        #signup2 p{
-            line-height: 1.8px !important;
-        }
-
