--- a/Baatna_web/assets/css/plugins/owl.theme.css
+++ b/Baatna_web/assets/css/plugins/owl.theme.css
@@ -50,7 +50,7 @@
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
 	border-radius: 20px;
-	background: rgba(230, 78, 62, 1);
+	background: #0ED7A3;
 }
 
 .owl-theme .owl-controls .owl-page.active span,
