website with changes

--- a/Baatna_web/assets/css/hallooou.css
+++ b/Baatna_web/assets/css/hallooou.css
@@ -899,6 +899,19 @@ video {
 .products-container p{
     color:#fff;
 }
+.bk-image{
+    background: url(../images/nexus4_portrait.png) no-repeat;
+    background-position: center ;
+}
+.img-response{
+   
+    margin-top: 30% !important;
+
+}
+.carousel-control1{
+    top:48% !important;
+    margin:-5% !important;
+}
 
 .products-container span.icon{
     display: inline-block;  
@@ -1859,7 +1872,7 @@ footer .fa-3x{
         width:100% !important;
     }
     .feature_image{
-        width: 80% !important;
+        width: 82% !important;
     }
     .fund_button{
         margin-top:50px !important;
@@ -1944,13 +1957,23 @@ footer .fa-3x{
         width:100% !important;
     }
     .feature_image{
-        width: 80% !important;
+        width: 90% !important;
     }
     .fund_button{
         margin-top:55px !important;
     }
+    .media{
+        display:none !important;
+    }
     .img-size{
         width:50px !important;
+    }
+    .responsive{
+        padding-right: 0px !important;
+        padding-left: 0px !important;
+    }
+    .carousel-control1{
+        margin:-12% !important;
     }
     
 }
@@ -1976,7 +1999,7 @@ footer .fa-3x{
         width:100% !important;
     }
     .feature_image{
-        width: 80% !important;
+        width: 90% !important;
     }
     
     .fund_button{
@@ -1984,6 +2007,12 @@ footer .fa-3x{
     }
     .img-size{
         width:50px !important;
+    }
+    .media{
+        display:none !important;
+    }
+    .media{
+        display:none !important;
     }
      
 }
